fixed spacing issue on banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,14 @@ body {
 }
 
 #gameBanner{
-  margin:300px, auto, auto, auto;
   padding:20px;
+  margin-top:20px;
   background-color:rgba(225, 230, 225, .8);
   text-align: center;
 }
 
 #gameScreen{
+  margin-top:25px;
   padding-top: 25px;
   padding-bottom: 25px;
   text-align: center;
@@ -42,8 +43,6 @@ body {
   position:absolute;
   bottom:0;
   width:300px;
-  /* left:50%;
-  right:50%; */
   text-align:center;
   padding-bottom:20px;
   padding-top: 50px;
